# buildabench_workshop

./: AGENTS.md  LICENSE  Makefile  README  README.md  env_agent.py  feature_discovery.py  feature_removal_agent.py  initialize.sql  pyproject.toml
.codex/skills/upload_benchmark/: SKILL.md
.github/workflows/: env-agent-scheme-interpreter.yml  synth-eval-scheme-interpreter.yml  test-scheme-interpreter.yml
dumpster/: .gitattributes  README.md  commit_log_as_jsonl.py  download_repo.py  extract_candidates.py  filter_commits_noexec.py  jsonl_to_parquet.sh  repo_names.txt
space/: README.md  app.py  tasks.jsonl  validated_tasks.jsonl
src/buildabench_workshop/: __init__.py  agentlib.py  anyagent.py  apply_patch.py  benchmark_workflow.py  check_validated_tasks.py  env_agent.py  eval_agent.py  eval_agent_unvalidated.py  eval_minisweagent.py  eval_patch_only.py  examine_repo.py  repolib.py  run_validated_workflow.py  search_replace_patch.py  synth_task.py  validate_task.py  view_tasks.py
src/julia_bench2/: __init__.py  agentlib.py  anyagent.py  check_validated_tasks.py  env_agent.py  eval_agent.py  examine_repo.py  feature_removal_agent.py  make_feature_request.py  repolib.py  synth_programming_task.py  synth_task.py  validate_task.py
test_projects/: __init__.py
test_projects/scheme_interpreter/: README.md  __init__.py  errors.py  parser.py  pyproject.toml  scheme.py
test_projects/scheme_interpreter/src/scheme_interpreter/: evaluator.py  printer.py
test_projects/scheme_interpreter/tests/: test_scheme.py
tests/: test_run_validated_workflow.py  test_search_replace_patch.py
