[project]
name = "julia-bench2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arjun Guha", email = "a.guha@northeastern.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.4",
    "web-request-cache",
]

[project.scripts]
julia-bench2 = "julia_bench2:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
web-request-cache = { path = "../web_request_cache", editable = true }
