[project]
name = "buildabench_workshop"
version = "0.1.0"
description = "Build-A-Bench Workshop"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: BSD License",
]
authors = [
    { name = "Arjun Guha", email = "a.guha@northeastern.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "bounded-subprocess>=2.3.1",
    "dspy>=3.0.4",
]


[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

