[project]
name = "scheme-interpreter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arjun Guha", email = "a.guha@northeastern.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=7.0.0",
]

[project.scripts]
scheme-interpreter = "scheme_interpreter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
